<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    android:orientation="vertical"
    tools:context="com.example.lenovo.courtcounter.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/team_a"
                android:textAllCaps="true"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView_pointCounterA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/counter_a"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="52sp" />

            <Button
                android:id="@+id/button_3PointsA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:onClick="threePointsA"
                android:text="@string/three_points_a"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/button_2PointsA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="twoPointsA"
                android:text="@string/two_points_a"
                android:textAllCaps="true" />


            <Button
                android:id="@+id/button_FreeThrowA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="freeThrowA"
                android:text="@string/free_throw_a"
                android:textAllCaps="true" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="2"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/team_b"
                android:textAllCaps="true"
                android:textColor="#616161"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/textView_pointCounterB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal"
                android:text="@string/counter_b"
                android:textColor="#000000"
                android:textSize="52sp" />

            <Button
                android:id="@+id/button_3PointsB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="24dp"
                android:onClick="threePointsB"
                android:text="@string/three_points_b" />

            <Button
                android:id="@+id/button_2PointsB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="twoPointsB"
                android:text="@string/two_points_b" />


            <Button
                android:id="@+id/button_FreeThrowB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:onClick="freeThrowB"
                android:text="@string/free_throw_b" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="reset"
        android:text="@string/reset" />

</RelativeLayout>


